--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -53,8 +53,7 @@ button:hover {
   padding: 0 4px;
 }
 
-#workspaces button:hover {
-}
+#workspaces button:hover {}
 
 #workspaces button.focused {
   /*    box-shadow: inset 0 -2px #c9545d; */
@@ -75,6 +74,7 @@ button:hover {
 #clock,
 #battery,
 #cpu,
+#custom-gpu,
 #memory,
 #disk,
 #temperature,
@@ -97,12 +97,12 @@ button:hover {
 }
 
 /* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
+.modules-left>widget:first-child>#workspaces {
   margin-left: 0;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
+.modules-right>widget:last-child>#workspaces {
   margin-right: 0;
 }
 
@@ -165,11 +165,11 @@ label:focus {
   color: #2d3436;
 }
 
-#tray > .passive {
+#tray>.passive {
   -gtk-icon-effect: dim;
 }
 
-#tray > .needs-attention {
+#tray>.needs-attention {
   -gtk-icon-effect: highlight;
   background-color: #eb4d4b;
 }
@@ -189,3 +189,9 @@ background-color: #000000;
 border: none;
 }
  */
+
+#workspaces button.active {
+
+  background-color: rgba(236, 240, 241, 0.8);
+  color: rgba(0, 0, 0, 1.0);
+}
